projects/Lockourier/portal/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: lockourier-dev
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: registry.coherent.in/lockourier:24
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registry-regcred
