projects/Lockourier/portal/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: lockourier-dev
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: wordpress
